--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ ol {
   color: #404bbf;
 }
 
-.menu-link::after {
+.current::after {
   content: "";
   position: absolute;
   display: block;
@@ -149,13 +149,14 @@ ol {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/people-office.jpg);
+    url(../images/people-office.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding-top: 188px;
   padding-bottom: 188px;
+  margin: 0 auto;
 }
 
 .hero {
@@ -307,10 +308,13 @@ ol {
   gap: 24px;
 }
 
+.people .social-networks-list-item {
+  margin-top: 8px;
+}
+
 .social-networks-list-item {
   width: 40px;
   height: 40px;
-  margin-top: 8px;
 }
 
 .social-networks-link {
@@ -444,14 +448,206 @@ ol {
   gap: 16px;
 }
 
-.social-media-wrapper .social-networks-list-item {
-  margin-top: 16px;
-}
-
 .social-media-wrapper .social-networks-link:hover {
   background-color: #31d0aa;
 }
 
 .social-media-wrapper .social-networks-link:focus {
   background-color: #31d0aa;
+}
+
+input {
+  font-family: inherit;
+  border-radius: 4px;
+}
+
+input::placeholder {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.48px;
+}
+
+.subscription-form-title {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  color: #fff;
+}
+
+.subscription-interactive-elements {
+  display: flex;
+}
+
+.subscription-form-input {
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  margin-top: 16px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  border-radius: 4px;
+}
+
+button {
+  font-family: inherit;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  background-color: #4d5ae5;
+  cursor: pointer;
+  display: block;
+  border: none;
+  border-radius: 4px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+button:hover {
+  background-color: #404bbf;
+}
+
+button:focus {
+  background-color: #404bbf;
+}
+
+.subscription-form-button {
+  min-width: 165px;
+  padding: 8px 24px;
+  height: 40px;
+  margin: 0 auto;
+  display: flex;
+  padding: 8px 24px;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+}
+
+.subscription-form-icon {
+  fill: #ffffff;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  z-index: 99999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate (-50%, -50%);
+  width: 408px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+}
+
+.modal-close-button {
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  fill: #2e2f42;
+  line-height: 0;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover {
+  fill: #ffffff;
+  background-color: #404bbf;
+}
+
+.modal-window-description {
+  color: #2e2f42;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  width: 360px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.contact-form {
+  width: 360px;
+}
+
+contact-form-input:focus-within {
+  border: 1px solid #4d5ae5;
+  fill: #4d5ae5;
+}
+
+.contact-field-wrapper {
+  width: 100%;
+  margin-bottom: 8px;
+}
+
+.contact-form-label {
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: 0.48px;
+  color: #8e8f99;
+  margin-bottom: 4px;
+}
+
+.input-and-icon {
+  position: relative;
+}
+
+.contact-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 8px;
+  padding-left: 38px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.contact-form-textarea {
+  width: 360px;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  resize: none;
 }
