--- a/css/styles.css
+++ b/css/styles.css
@@ -411,6 +411,7 @@ ol {
 .footer > .container {
   display: flex;
   align-items: baseline;
+  position: relative;
 }
 
 .logo-paragraph-wrapper {
@@ -469,6 +470,10 @@ input::placeholder {
   letter-spacing: 0.48px;
 }
 
+.subscription-form {
+  position: absolute;
+  right: 0;
+}
 .subscription-form-title {
   font-size: 16px;
   font-weight: 500;
@@ -544,9 +549,9 @@ button:focus {
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   z-index: 99999;
-  opacity: 0;
+  /* opacity: 0;
   visibility: hidden;
-  pointer-events: none;
+  pointer-events: none; */
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
