--- a/css/styles.css
+++ b/css/styles.css
@@ -462,28 +462,18 @@ input {
   border-radius: 4px;
 }
 
-input::placeholder {
-  color: #fff;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 2;
-  letter-spacing: 0.48px;
-}
-
-.subscription-form {
-  position: absolute;
-  right: 0;
-}
 .subscription-form-title {
+  margin-bottom: 16px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   color: #fff;
 }
 
-.subscription-interactive-elements {
+.subscription-form {
   display: flex;
+  gap: 24px;
 }
 
 .subscription-form-input {
@@ -494,20 +484,19 @@ input::placeholder {
   background-color: transparent;
   border: 1px solid #fff;
   border-radius: 4px;
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+input::placeholder {
+  color: #fff;
+  font-weight: 400;
 }
 
 button {
-  font-family: inherit;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.64px;
-  background-color: #4d5ae5;
-  cursor: pointer;
-  display: block;
-  border: none;
-  border-radius: 4px;
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -523,9 +512,7 @@ button:focus {
 
 .subscription-form-button {
   min-width: 165px;
-  padding: 8px 24px;
   height: 40px;
-  margin: 0 auto;
   display: flex;
   padding: 8px 24px;
   gap: 16px;
@@ -533,11 +520,18 @@ button:focus {
   align-items: center;
   font-size: 16px;
   font-weight: 500;
+  font-family: "Roboto", sans-serif;
   line-height: 1.5;
-  letter-spacing: 0.64px;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
 }
 
 .subscription-form-icon {
+  margin-left: 16px;
   fill: #ffffff;
 }
 
@@ -566,14 +560,19 @@ button:focus {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate (-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 408px;
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
+  min-height: 584px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 24px;
   height: 24px;
   padding: 0;
@@ -585,13 +584,30 @@ button:focus {
   position: absolute;
   top: 24px;
   right: 24px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover {
   fill: #ffffff;
   background-color: #404bbf;
+}
+
+.modal-close-button:focus {
+  fill: #ffffff;
+  background-color: #404bbf;
+}
+
+.modal-close-button-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover.modal-close-button-icon {
+  fill: #ffffff;
+}
+
+.modal-close-button:focus.modal-close-button-icon {
+  fill: #ffffff;
 }
 
 .modal-window-description {
@@ -639,6 +655,11 @@ contact-form-input:focus-within {
   left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus.contact-input-icon {
+  fill: #4d5ae5;
 }
 
 .contact-form-input {
@@ -647,12 +668,87 @@ contact-form-input:focus-within {
   margin-bottom: 8px;
   padding-left: 38px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus {
+  border-color: #4d5ae5;
+}
+
+.contact-textarea-wrapper {
+  margin-bottom: 16px;
 }
 
 .contact-form-textarea {
-  width: 360px;
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.contact-checkbox-wrapper {
+  margin-bottom: 24px;
+}
+
+.contact-form-privacy-label {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.user-privacy-custom-checkbox {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.contact-checkbox-wrapper input:checked user-privacy-custom-checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.privacy-policy-link {
+  color: #4d5ae5;
+}
+
+.contact-form-button {
+  min-width: 169px;
+  height: 56px;
+  display: block;
+  margin: 0 auto;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
