--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,11 @@ input {
   color: #fff;
 }
 
+.subscription-form-container {
+  position: absolute;
+  right: 0;
+}
+
 .subscription-form {
   display: flex;
   gap: 24px;
@@ -584,6 +589,8 @@ button:focus {
   transform: translate(-50%, -50%);
   width: 408px;
   background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
   min-height: 584px;
@@ -597,6 +604,7 @@ button:focus {
   width: 24px;
   height: 24px;
   padding: 0;
+  cursor: pointer;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -606,16 +614,16 @@ button:focus {
   top: 24px;
   right: 24px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover {
-  fill: #ffffff;
+  border: none;
   background-color: #404bbf;
 }
 
 .modal-close-button:focus {
-  fill: #ffffff;
+  border: none;
   background-color: #404bbf;
 }
 
@@ -679,7 +687,7 @@ contact-form-input:focus-within {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-input:focus.contact-input-icon {
+.contact-form-input:focus .contact-input-icon {
   fill: #4d5ae5;
 }
 
@@ -689,6 +697,7 @@ contact-form-input:focus-within {
   margin-bottom: 8px;
   padding-left: 38px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -706,6 +715,7 @@ contact-form-input:focus-within {
   height: 120px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
   resize: none;
   font-size: 12px;
   line-height: 1.17;
@@ -746,7 +756,7 @@ contact-form-input:focus-within {
   fill: transparent;
 }
 
-.contact-checkbox-wrapper input:checked user-privacy-custom-checkbox {
+.contact-checkbox-wrapper input:checked .user-privacy-custom-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
