--- a/css/styles.css
+++ b/css/styles.css
@@ -684,10 +684,6 @@ button:focus {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-input:focus.contact-input-icon {
-  fill: #4d5ae5;
-}
-
 .contact-form-input {
   width: 100%;
   height: 40px;
@@ -701,6 +697,10 @@ button:focus {
 
 .contact-form-input:focus {
   border-color: #4d5ae5;
+}
+
+.input-and-icon:focus.contact-input-icon {
+  fill: #4d5ae5;
 }
 
 .contact-textarea-wrapper {
