--- a/css/styles.css
+++ b/css/styles.css
@@ -699,7 +699,7 @@ button:focus {
   border-color: #4d5ae5;
 }
 
-.input-and-icon:focus.contact-input-icon {
+.contact-field-wrapper:focus .contact-input-icon {
   fill: #4d5ae5;
 }
 
@@ -737,6 +737,7 @@ button:focus {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  margin-left: 8px;
 }
 
 .user-privacy-custom-checkbox {
@@ -753,7 +754,7 @@ button:focus {
   fill: transparent;
 }
 
-.contact-form-checkbox:checked.user-privacy-custom-checkbox {
+#user-privacy:checked .user-privacy-custom-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
