--- a/css/styles.css
+++ b/css/styles.css
@@ -699,7 +699,7 @@ button:focus {
   border-color: #4d5ae5;
 }
 
-.contact-field-wrapper:focus .contact-input-icon {
+.contact-form-input:focus + .contact-input-icon {
   fill: #4d5ae5;
 }
 
@@ -737,27 +737,47 @@ button:focus {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .user-privacy-custom-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   fill: transparent;
 }
 
-#user-privacy:checked .user-privacy-custom-checkbox {
+.contact-form-checkbox:checked
+  + .contact-form-privacy-label
+  > .user-privacy-custom-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+}
+
+.contact-form-checkbox:focus
+  + .contact-form-privacy-label
+  > .user-privacy-custom-checkbox {
+  outline: 2px solid rgba(0, 0, 255, 0.5);
+}
+
+.privacy-policy-check-icon {
+  fill: none;
+  opacity: 0;
+}
+
+.contact-form-checkbox:checked
+  + .contact-form-privacy-label
+  .privacy-policy-check-icon {
+  opacity: 1;
 }
 
 .privacy-policy-link {
